fix(client): reevaluation report rectifications

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -222,7 +222,7 @@
     "evolution": "Evolution",
     "recurrence": "Recurrence",
     "secondaryComplaints": "Secondary complaints",
-    "comorbidity": "Comorbidity",
+    "comorbidity": "Patient reported comormidity",
     "isReveivingTreatment": "Is receiving treatment",
     "activityLimitation": "Activity limitation",
     "commorbidityHeart": "Heart disease",
@@ -369,7 +369,7 @@
     "reEvaluationReport": "Re-Evaluation Report",
     "report": "Report",
     "filledProfessional": "Filled by the professional",
-    "comorbidities": "Comorbidities",
+    "comorbidities": "Patient reported comormidity",
     "diagnosisTitle": "Diagnosis & Clinical impression",
     "currentEpisode": "Current episode of care",
     "prognosis": "Prognosis",
