--- a/packages/client/public/locales/fr/translation.json
+++ b/packages/client/public/locales/fr/translation.json
@@ -221,7 +221,7 @@
     "evolution": "Évolution",
     "recurrence": "Récurrence",
     "secondaryComplaints": "Motifs de consultation secondaires",
-    "comorbidity": "Comorbidités",
+    "comorbidity": "Comorbidité(s) rapportée(s)par le/la patient(e)",
     "isReveivingTreatment": "Reçoie un traitement",
     "activityLimitation": "Limitation d'activités",
     "commorbidityHeart": "Condition cardiaque",
@@ -237,7 +237,7 @@
     "commorbidityOsteoarthritis": "Ostéoarthrite, arthrite dégénérative",
     "commorbidityRheumatoidArthritis": "Arthrite rhumatoïde",
     "redFlags": "Drapeaux rouges",
-    "relevantScores": "Mesures des résultats rapportés par le patient",
+    "relevantScores": "Mesures des résultats rapportés par le/la patient(e)",
     "healthQuality": "Qualité de santé perçue",
     "qualityOfLife": "Qualité de vie perçue",
     "healthSatisfaction": "Satisfaction de la santé perçue",
@@ -368,7 +368,7 @@
     "reEvaluationReport": "Rapport de ré-évaluation",
     "report": "Rapport",
     "filledProfessional": "Rempli par le professionnel",
-    "comorbidities": "Comorbidités",
+    "comorbidities": "Comorbidité(s) rapportée(s)par le/la patient(e)",
     "diagnosisTitle": "Diagnostic & impression clinique",
     "currentEpisode": "Épisode actuel de soins",
     "prognosis": "Prognostic",
@@ -379,7 +379,7 @@
     "dob": "Date de Naissance",
     "allPainAreas": "Zone(s) douloureuse(s) associée(s) au motif de consultation principal",
     "relatedPainAreas": "Toutes les zones douloureuses du corps",
-    "findings": "Relevant objective findings",
+    "findings": "Données objectives concordantes",
     "investigationResults": "Données cliniques objective et résultats d’imagerie(s)/ d’investigation(s) concordants",
     "additionalInvestigation": "Investigation complémentaire demandée ou prévue",
     "specify": "Préciser",
