fix: consent form button translation

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -172,7 +172,7 @@
     "metrics": "Your Metrics"
   },
   "register": {
-    "fillConsent": "Consent form",
+    "fillConsent": "Research consent form",
     "passwordError": "Passwords do not match",
     "title": "Register into the application",
     "firstName": "First Name",
