--- a/packages/client/public/locales/fr/translation.json
+++ b/packages/client/public/locales/fr/translation.json
@@ -172,7 +172,7 @@
     "metrics": "Vos statistiques"
   },
   "register": {
-    "fillConsent": "Formulaire de consentement",
+    "fillConsent": "Consentement pour la recherche",
     "passwordError": "Les mots de passe ne correspondent pas",
     "title": "S'inscrire dans l'application",
     "firstName": "Prénom",
