fix(client): bundle translation

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -149,7 +149,7 @@
       "type": "Type",
       "initial": "Initial",
       "reEvaluation": "Re-evaluation",
-      "questionnaires": {
+      "bundles": {
         "NECK_BUNDLE": "Bundle: Neck",
         "BACK_BUNDLE": "Bundle: Back",
         "MS_BUNDLE": "Bundle: Upper Limb",
