feat(all): pen, fill patient questionnaires by the prof.

--- a/packages/client/public/locales/en/translation.json
+++ b/packages/client/public/locales/en/translation.json
@@ -110,6 +110,7 @@
       "dateSent": "Date sent",
       "sent": "Sent",
       "remove": "Remove",
+      "fill": "Fill",
       "none": "None",
       "export": "Export to PDF",
       "score": {
