--- a/packages/client/public/locales/fr/translation.json
+++ b/packages/client/public/locales/fr/translation.json
@@ -109,6 +109,7 @@
       "dateSent": "Date d'envoi",
       "sent": "Envoyé",
       "remove": "Retirer",
+      "fill": "Remplir",
       "none": "Aucun",
       "export": "Exporter au format PDF",
       "score": {
